añadido enums tipo_estado